--- a/40-templating/package.json
+++ b/40-templating/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "code-tag": "^1.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
