--- a/100-SQL/package.json
+++ b/100-SQL/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "code-tag": "^1.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.5.0",
